--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,12 +13,12 @@
     <script
         id="sap-ui-bootstrap"
         src="resources/sap-ui-core.js"
-        data-sap-ui-theme="sap_fiori_3"
+        data-sap-ui-theme="sap_horizon"
         data-sap-ui-resourceroots='{ "daniexamples.invoices": "./" }'
         data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-async="true"
-        data-sap-ui-preload="async"
+        //data-sap-ui-preload="async"
         data-sap-ui-frameOptions="trusted"
     ></script>
 </head>
